fix(right-sidebar): the right page command overflows the page

--- a/scss/_other.scss
+++ b/scss/_other.scss
@@ -27,6 +27,10 @@
 .sidebar-item-list .page-properties, .sidebar-item-list .block-properties {
     background-color: var(--ls-secondary-background-color);
 }
+// fix: The right page command overflows the page 
+#right-sidebar-container .editor-inner .absolute[data-modal-name="commands"] {
+    left: 0px;
+}
 
 // === 外部和内部链接样式 ===
 
